Add server fire function

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -8,8 +8,8 @@ ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/JoyWayTest/Maps/JoyWayMap.JoyWayMap
 ServerDefaultMap=/Engine/Maps/Entry
-GlobalDefaultGameMode=/Script/Engine.GameModeBase
-GlobalDefaultServerGameMode=None
+GlobalDefaultGameMode=/Game/JoyWayTest/Blueprints/BP_GameMode.BP_GameMode_C
+GlobalDefaultServerGameMode=/Game/JoyWayTest/Blueprints/BP_GameMode.BP_GameMode_C
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_VirtualRealityBP",NewGameName="/Script/JoyWayTest")
@@ -36,7 +36,7 @@ r.TiledReflectionEnvironmentMinimumCount=10
 
 [/Script/NavigationSystem.NavigationSystemV1]
 bAutoCreateNavigationData=True
-bAllowClientSideNavigation=False
+bAllowClientSideNavigation=True
 bInitialBuildingLocked=False
 bSkipAgentHeightCheckWhenPickingNavData=False
 DataGatheringMode=Instant
