--- a/JoyWayTest.uproject
+++ b/JoyWayTest.uproject
@@ -14,6 +14,12 @@
 			]
 		}
 	],
+	"Plugins": [
+		{
+			"Name": "StandaloneServer",
+			"Enabled": true
+		}
+	],
 	"TargetPlatforms": [
 		"PS4",
 		"WindowsNoEditor"
