--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,13 +1,13 @@
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/JoyWayTest/Maps/JoyWayMap.JoyWayMap
+EditorStartupMap=/Game/JoyWayTest/Maps/JoyWayMap1.JoyWayMap1
 LocalMapOptions=
-TransitionMap=
+TransitionMap=/Game/JoyWayTest/Maps/EmptyLevel.EmptyLevel
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/JoyWayTest/Maps/JoyWayMap.JoyWayMap
-ServerDefaultMap=/Engine/Maps/Entry
+GameDefaultMap=/Game/JoyWayTest/Maps/JoyWayMap1.JoyWayMap1
+ServerDefaultMap=/Game/JoyWayTest/Maps/JoyWayMap1.JoyWayMap1
 GlobalDefaultGameMode=/Game/JoyWayTest/Blueprints/BP_GameMode.BP_GameMode_C
 GlobalDefaultServerGameMode=/Game/JoyWayTest/Blueprints/BP_GameMode.BP_GameMode_C
 
