--- a/Config/DefaultEditorPerProjectUserSettings.ini
+++ b/Config/DefaultEditorPerProjectUserSettings.ini
@@ -1,2 +1,11 @@
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/VirtualRealityBP/Maps/
+
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=True
+Startup=AutomaticButHidden
+bPreloadEngineModules=False
+bPreloadEnginePluginModules=False
+bPreloadProjectModules=True
+bPreloadProjectPluginModules=True
+
